--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>EaseValuate</title>
+
+    <!--vanta.js-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.dots.min.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -36,5 +40,30 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+      <script>
+        document.addEventListener('DOMContentLoaded', function() {
+      if (window.VANTA) {
+        window.vantaEffect = window.VANTA.DOTS({
+          el: document.body,
+          mouseControls: true,
+          touchControls: true,
+          gyroControls: false,
+          minHeight: 200.00,
+          minWidth: 200.00,
+          scale: 1.00,
+          scaleMobile: 1.00,
+          color: 0xa120ff,
+          color2: 0x202eff,
+          backgroundColor: 0x000000,
+          size: 3.00,
+          spacing: 33.00,
+          showLines: false,
+          className: 'vanta-canvas'
+        
+            });
+          }
+        });
+    </script>
   </body>
 </html>
