transparency + ui+coollogo style

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700&family=Rajdhani:wght@500;600&display=swap" rel="stylesheet">
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -26,6 +27,10 @@
     <!--vanta.js-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.dots.min.js"></script>
+    <style>
+      html,body, #root {height: 100%; margin: 0; padding:0;}
+      body { background: #000; overflow:auto;}
+      </style> 
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -56,7 +61,7 @@
           color: 0xa120ff,
           color2: 0x202eff,
           backgroundColor: 0x000000,
-          size: 3.00,
+          size: 4.00,
           spacing: 33.00,
           showLines: false,
           className: 'vanta-canvas'
